--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <module>order-service</module>
         <module>common</module>
         <module>infrastructure</module>
-        <module>infrastructure/kafka</module>
+        <module>customer-service</module>
     </modules>
 
     <parent>
@@ -24,7 +24,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.9.0</maven-compiler-plugin.version>
         <mockito.version>4.5.1</mockito.version>
         <spring-kafka.version>2.8.2</spring-kafka.version>
         <kafka-avro-serializer.version>7.0.1</kafka-avro-serializer.version>
