--- a/restaurant-service/pom.xml
+++ b/restaurant-service/pom.xml
@@ -9,15 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common</artifactId>
+    <artifactId>restaurant-service</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>common-domain</module>
-        <module>common-application</module>
-        <module>common-dataaccess</module>
+        <module>restaurant-domain</module>
+        <module>restaurant-container</module>
+        <module>restaurant-dataaccess</module>
+        <module>restaurant-messaging</module>
     </modules>
 
-    <properties>
-    </properties>
 
 </project>
