--- a/order-service/order-domain/order-application-service/pom.xml
+++ b/order-service/order-domain/order-application-service/pom.xml
@@ -11,13 +11,15 @@
 
     <artifactId>order-application-service</artifactId>
 
-    <properties>
-    </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.food.ordering.system</groupId>
             <artifactId>saga</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
+            <artifactId>outbox</artifactId>
         </dependency>
         <dependency>
             <groupId>com.food.ordering.system</groupId>
@@ -34,6 +36,10 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
