--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,11 @@
 
     <properties>
         <maven-compiler-plugin.version>3.9.0</maven-compiler-plugin.version>
-        <mockito.version>5.7.0</mockito.version>
+        <mockito.version>4.3.1</mockito.version>
         <spring-kafka.version>2.8.2</spring-kafka.version>
         <kafka-avro-serializer.version>7.0.1</kafka-avro-serializer.version>
         <avro.version>1.11.0</avro.version>
+        <byte-buddy.version>1.12.7</byte-buddy.version>
     </properties>
 
     <dependencyManagement>
@@ -150,6 +151,11 @@
                 <artifactId>mockito-core</artifactId>
                 <version>${mockito.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>${byte-buddy.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
